fix webgl limits with too many images on small devices by loading smaller images when small screen + fine css changes

--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ h5 {
   padding-top: 2px;
   white-space: nowrap;
   position: sticky;
-  z-index: 10;
+  z-index: 2;
   padding-left: 8px;
 }
 
@@ -572,9 +572,10 @@ h5 {
 #comics {
   border-top: 1px dashed #444;
   overflow-x: hidden;
+  min-height: 35%;
 }
 #comic-details {
-  height: calc(100% / 2);
+  height: 50%;
   border-top: 1px dashed #444;
 }
 
